app/fileopscontextmanageritem.cpp
@@ -215,7 +215,6 @@ FileOpsContextManagerItem::FileOpsContextManagerItem(ContextManager* manager, QL
 
     connect(QApplication::clipboard(), SIGNAL(dataChanged()),
             SLOT(updatePasteAction()));
-    updatePasteAction();
 
     // Delay action update because it must happen *after* main window has called
     // createGUI(), otherwise calling mXMLGUIClient->plugActionList() will
@@ -257,6 +256,7 @@ void FileOpsContextManagerItem::updateActions()
     mXMLGUIClient->plugActionList("file_action_list", list);
 
     updateSideBarContent();
+    updatePasteAction();
 }
 
 void FileOpsContextManagerItem::updatePasteAction()
